feat: 新增字典 - 用户分配的角色